--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
 		"build": "turbo run build --filter=!@example/*",
 		"build:dts": "turbo run build:dts",
 		"----------------------------------------------------------------------------------": "",
-		"lint": "turbo run lint",
-		"lint:fix": "turbo run lint:fix",
-		"typecheck": "turbo run typecheck",
+		"lint": "turbo run lint  --filter=!@example/*",
+		"lint:fix": "turbo run lint:fix --filter=!@example/*",
+		"typecheck": "turbo run typecheck  --filter=!@example/*",
 		"-----------------------------------------------------------------------------------": "",
-		"test": "turbo run test",
+		"test": "turbo run test  --filter=!@example/*",
 		"aggregate": "node ./scripts/aggregate.mjs",
 		"-------------------------------------------------------------------------------------": "",
 		"format": "prettier --write \"**/*.{ts,js,mjs,cjs,d.ts,yml,yaml,toml,json,html,css,vue,tsx,html,astro,.jsx}\"",
