chore: add keywords to `package.json`

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -82,8 +82,20 @@
 	"keywords": [
 		"icon",
 		"svg",
+		"html",
 		"prerender",
 		"iconify",
+		"astro",
+		"vite",
+		"webpack",
+		"esbuild",
+		"rollup",
+		"svelte",
+		"react",
+		"preact",
+		"solid",
+		"vue",
+		"vite plugin",
 		"astro-integration",
 		"vite-plugin",
 		"esbuild-plugin",
