--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,9 @@
     "yzhang.markdown-all-in-one",
     "streetsidesoftware.code-spell-checker",
     "astro-build.astro-vscode",
-    "antfu.iconify"
+    "antfu.iconify",
+    "vue.volar",
+    "svelte.svelte-vscode",
+    "unifiedjs.vscode-mdx"
   ],
 }
