--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,10 @@
 	"name": "icon-prerender",
 	"version": "0.0.3",
 	"description": "A plugin to prerender your SVG icons at compile time, rather than making the client fetch them during runtime.",
-	"author": "Ernest Nkansah-Badu",
+	"author": {
+		"name": "Ernest Nkansah-Badu",
+		"url": "https:/www.ernestbadu.me"
+	},
 	"license": "MIT",
 	"homepage": "https://github.com/Ernxst/icon-prerender",
 	"bugs": "https://github.com/Ernxst/icon-prerender/issues",
@@ -61,8 +64,7 @@
 		}
 	},
 	"files": [
-		"dist",
-		"README.md"
+		"dist"
 	],
 	"engines": {
 		"node": "^14.15.0 || >=16.0.0",
@@ -131,10 +133,31 @@
 	},
 	"peerDependencies": {
 		"@iconify/json": "*",
+		"typescript": "*",
 		"astro": "*",
 		"esbuild": "*",
 		"rollup": "*",
 		"vite": "*",
 		"webpack": "*"
+	},
+	"peerDependenciesMeta": {
+		"@iconify/json": {
+			"optional": false
+		},
+		"typescript": {
+			"optional": false
+		},
+		"astro": {
+			"optional": true
+		},
+		"esbuild": {
+			"optional": true
+		},
+		"rollup": {
+			"optional": true
+		},
+		"webpack": {
+			"optional": true
+		}
 	}
 }
