chore: add words to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
     "iconify",
     "pnpm",
     "prerender",
+    "prerenders",
+    "prerendered",
+    "prerendering",
     "tsup",
     "typecheck",
     "Vite",
